<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bastiqui.moviesapp.activities.FragmentsMainActivity">
    <item
        android:id="@+id/action_myZone"
        android:orderInCategory="100"
        android:name="@string/my_zone"
        app:showAsAction="ifRoom"
        android:title="@string/my_zone"
        android:icon="@drawable/baseline_person_white_18dp" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:name="@string/action_settings"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:name="@string/action_help"
        app:showAsAction="never"
        android:title="@string/action_help" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:name="@string/action_about"
        app:showAsAction="never"
        android:title="@string/action_about" />
</menu>