<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/display_info">

    <HorizontalScrollView
        android:id="@+id/scrollInfo"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.youtube.player.YouTubeThumbnailView
                android:id="@+id/youtubePreview"
                android:layout_width="400dp"
                android:layout_height="208dp" />

            <ImageView
                android:id="@+id/infoBackPoster"
                android:layout_width="400dp"
                android:layout_height="208dp"
                android:contentDescription="@string/backdrop_image" />

            <ImageView
                android:id="@+id/infoPoster"
                android:layout_width="400dp"
                android:layout_height="208dp"
                android:contentDescription="@string/posterpath_image" />

        </LinearLayout>

    </HorizontalScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addWatchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollInfo"
        app:srcCompat="@drawable/baseline_add_white_18dp" />

    <TextView
        android:id="@+id/display_title"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollInfo" />

    <TextView
        android:id="@+id/display_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_title" />

    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_type" />

    <babushkatext.BabushkaText
        android:id="@+id/averageRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_title" />

    <TextView
        android:id="@+id/display_genres"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

    <TextView
        android:id="@+id/display_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_genres"
        android:ellipsize="end"
        android:maxLines="2" />

    <TextView
        android:id="@+id/readMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/read_more"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_description" />

</android.support.constraint.ConstraintLayout>